--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
-    "test": "nodemon src/app.js"
+    "test": "nodemon src/app.js",
+    "sq": "sequelize init"
   },
   "author": "",
   "license": "ISC",
@@ -15,8 +16,11 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "method-override": "^3.0.0",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.2.3",
     "nodemon": "^2.0.20",
+    "sequelize": "^6.31.0",
     "session": "^0.1.0"
   }
 }
