--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.3",
     "nodemon": "^2.0.20",
-    "sequelize": "^6.31.0",
-    "session": "^0.1.0"
+    "sequelize": "^6.31.1",
+    "sequelize-cli": "^6.6.0",
+    "session": "^0.1.0",
+    "sql": "^0.78.0"
   }
 }
